# licence_plate_camera

./: .gitignore  CMakeLists.txt  README.md  build.ps1  copy_files.ps1  postCurl.cmd  putCurl.cmd  run.ps1  vcpkg.json
images/: black_white_list_template.xls  black_white_list_upload.xls
incEn/: HCNetSDK.h
include/: image_list_table.hpp  ui_utils.hpp
src/: alarm_callback.hpp  camera_device.hpp  coutry_strings.hpp  excel_xls_edit.hpp  image_list_table.cpp  listen_callback.hpp  main.cpp
